--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "express-hello-world",
+  "name": "starter-rest-api",
   "version": "1.0.0",
-  "description": "Expressjs Hello World example to provide faster start deploying on Cyclic platform",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "serve": "nodemon --watch . server.js",
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "env-cmd nodemon index.js",
+    "repl": "env-cmd node"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyclic-software/express-hello-world.git"
-  },
-  "author": "Cyclic Software",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cyclic-software/express-hello-world/issues"
-  },
-  "homepage": "https://github.com/cyclic-software/express-hello-world#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
+  "keywords": [],
+  "author": "Kam Lasater <kam.lasater@cyclic.sh>",
+  "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "@cyclic.sh/dynamodb": "^0.0.33",
+    "aws-sdk": "^2.1483.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.1"
   }
 }
